manifests/nexus-ns.yml
---

kind: Namespace
apiVersion: v1
metadata:
  name: nexus
  labels:
    name: nexus
